src/sass/components/_carousel.scss
.carousel {
  // position: relative;
  background-color: $blue;
  grid-column: 1 / -1;
}

/* Featured Auction Section of Carousel */
.auction-slide {
  width: 100%;
  height: 300px;
  margin-right: 10px;
  background: blue;
  // border-radius: 5px;
  display: flex;
  flex-direction: column;
  align-items: center;

  @media (min-width: $small-screen) {
    & {
      height: 375px;
    }
  }

  &::after {
    content: "";
    position: absolute;
    z-index: 70;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    background-color: rgba($blue, 0.6);
  }

  .auction-slide__type {
    position: relative;
    z-index: 80;
    color: $gold;
    background-color: rgba(#326996, 0.5);
    font-size: 1.5rem;
    text-align: center;
    padding: 5px 20px;

    @media (min-width: $small-screen) {
      & {
        font-size: 2rem;
      }
    }

    @media (min-width: $med-screen) {
      & {
        font-size: 2.2rem;
      }
    }
  }
}

.auction-slide__inner {
  display: flex;
  flex-direction: column;
  position: relative;
  z-index: 80;
  align-self: start;
  max-width: 100%;
  text-align: center;

  & .btn {
    align-self: center;
  }


  @media (min-width: $small-screen) {
    & {
      text-align: left;
      max-width: 75%;
      align-self: center;
      // margin-left: 1rem;
    }

    @media (min-width: $med-screen) {
      & {
        max-width: 60%;
      }
    }
  }

  .auction-slide__heading {
    color: $white;
    font-size: 1.3rem;
    text-shadow: $featured-text-shadow;
    font-weight: 300;
    font-style: italic;

    @media (min-width: $small-screen) {
      & {
        font-size: 1.5rem;
        text-align: left;
      }
    }

    @media (min-width: $med-screen) {
      & {
        font-size: 1.8rem;
        line-height: 1.3;
      }
    }
  }

  .auction-slide__date-time {
    font-size: 1.3rem;
    color: $gold;
    text-shadow: $featured-text-shadow;
    margin-bottom: 1rem;

    @media (min-width: $small-screen) {
      & {
        font-size: 1.4rem;
      }
    }

    @media (min-width: $med-screen) {
      & {
        font-size: 1.6rem;
      }
    }
  }
}

.carousel.is-fullscreen .carousel-cell {
  height: 100%;
}

/* Flickity Buttons */
.flickity-button {
  background: transparent;
}
/* big previous & next buttons */
.flickity-prev-next-button {
  width: 30px;
  height: 30px;

  @media (min-width: $small-screen) {
   & {
     width: 50px;
     height: 50px;
   }
  }
}

/* icon color */
.flickity-button-icon {
  fill: $gold;
}
/* hide disabled button */
.flickity-button:disabled {
  display: none;
}

.flickity-button:hover {
  background: rgba($blue, 0.5);
}

/* Flickity Dots bottom of Carousel */
.flickity-page-dots {
  bottom: 4px;
  // background-color: rgba($blue, 0.5);

  & .dot.is-selected {
    background-color: $gold;
  }
  & .dot {
    background: $black;
    opacity: 0.8;

  }
}

